# social_network_Django

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile.mcp  MANIFEST.in  README.md  Tasks.md  apidoc.json  patch_deploy.sh  poetry_bump.sh  pyproject.toml  pytest.ini  review-api-implementation.skill  ruff.toml  zappa_settings.json
.cursor/: mcp.json
.cursor/plans/: production_mcp_server_a1b3a798.plan.md  production_mcp_server_c476c5aa.plan.md
fb_post/: __init__.py  admin.py
fb_post/adapters/: service_adapter.py
fb_post/api_specs/: api_spec.json
fb_post/constants/: enum.py  exception_messages.py
fb_post/exceptions/: custom_exceptions.py
fb_post/interactors/: create_comment_interactor.py  create_post_interactor.py  delete_post_interactor.py  get_post_interactor.py  post_interactors.py  react_to_post_interactor.py
fb_post/migrations/: 0001_initial.py  0002_reaction_unique_post_reaction_per_user.py
fb_post/models/: __init__.py  comment.py  post.py  reaction.py  user.py
fb_post/presenters/: create_comment_presenter_implementation.py  create_post_presenter_implementation.py  delete_post_presenter_implementation.py  get_post_presenter_implementation.py  json_presenter.py  react_to_post_presenter_implementation.py
fb_post/storages/: storage_implementation.py
posts/: __init__.py  app.py
posts/api_specs/: api_spec.json
posts/models/: __init__.py
social_network/: urls.py  wsgi.py
social_network/common/: authentication.py
social_network/middlewares/: origin_logging_middleware.py
social_network/settings/: base.py  base_aws_s3.py  base_server.py  base_swagger_utils.py  beta.py  gamma.py  local.py  local_tests.py  staging.py
social_network_mcp/: README.md  __init__.py  __main__.py  bootstrap.py  config.py  server.py
social_network_mcp/adapters/: tool_result_adapter.py
social_network_mcp/auth/: api_key_validator.py
users/: __init__.py  app.py
verification/: cc_empty.json  cc_invalid_post.json  cc_invalid_user.json  cc_valid.json  create_post.json  rtp_invalid_post.json  rtp_invalid_user.json  rtp_valid.json
(+124 files in other folders)
