[tool.poetry]
name = "social_network"
version = "0.0.1"
description = ""
authors = []
readme = "README.md"
packages = [
    { include = "posts" },
    { include = "fb_post" },
]


[tool.poetry_bumpversion.file."posts/__init__.py"]


[tool.poetry.dependencies]
# packages
python = "^3.12"
django = "5.1"
django-fine-uploader-s3 = "4.0.0"
boto3 = "1.28.1"
boto = "2.49.0"
django-storages = "1.13.1"
raven = "6.10.0"
enum34 = "1.1.6"
cryptography = ">=36.0.2,<=40.0.2"

# only our third party here
ib-common = "6.0.0"
django-swagger-utils = "6.0.0"

# logentries
r7insight-python = { git = "https://github.com/laalamrajesh/r7insight_python", branch="py312-support"}
logentries =  { git = "https://github.com/laalamrajesh/Logentries", branch="python312-support"}

# cors-headers
django-cors-headers = "4.5.0"

# ib_sentry wrapper
ib-sentry-wrapper = "5.0.0"

ib-users = "6.2.0"
ib-user-accounts-helper = "4.2.1"
ib-apigateway-ws = "6.0.0"
ib-notifications = "5.0.0"
ib-pynamodb = "7.0.0"

gspread = ">=3.7.0,<=5.4.0"
oauth2client = "4.1.3"
requests = ">=2.21.0,<=2.28.1"
s3_uploader =  "5.0.0"

[tool.poetry.group.test]
optional = true
[tool.poetry.group.test.dependencies]
coverage = "4.5.3"
freezegun = "1.5.1"
factory-boy = "2.12.0"
pytest-mock = ">=3.1.1,<=3.10.0"
snapshottest = "1.0.0a1"
mock = ">=3.0.5,<=4.0.3"
pytest = "7.4.3"
pytest-cov = "2.7.1"
pytest-django = "4.7.0"
pytest-xdist = "3.4.0"

[tool.poetry.group.db]
[tool.poetry.group.db.dependencies]
mysqlclient = "2.2.4"

[tool.poetry.group.deploy]
[tool.poetry.group.deploy.dependencies]
ib-zappa = "2.0.0"
setuptools= "75.2.0"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
jupyter = "1.0.0"
pre-commit = "3.4.0"

[tool.poetry.group.lint]
optional = true
[tool.poetry.group.lint.dependencies]
pylint = "3.0.2"
ruff = "0.1.2"

[[tool.poetry.source]]
name = "codeartifact"
url = "https://nxtwave-110916805156.d.codeartifact.ap-south-1.amazonaws.com/pypi/pypi/simple/"
priority = "supplemental"
